terraform/conf/puppet/code/environments/production/modules/envoy/files/regnal-voting.yaml
static_resources:
  listeners:
  - name: voting-svc-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: voting-svc
            virtual_hosts:
            - name: voting-svc
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: voting-svc}
              require_tls: EXTERNAL_ONLY
          http_filters:
          - name: envoy.router
      tls_context:
        require_client_certificate: true
        common_tls_context:
          alpn_protocols: "h2"
          tls_certificate_sds_secret_configs:
          - name: voting-svc.regnal
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                  envoy_grpc:
                    cluster_name: sds_server_uds
          validation_context_sds_secret_config:
            name: trusted_ca
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                  envoy_grpc:
                    cluster_name: sds_server_uds
  clusters:
  - name: voting-svc
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8080
  - name: sds_server_uds
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: sds_server_uds
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /tmp/sds.unix
